--- a/order-test.yml
+++ b/order-test.yml
@@ -1,14 +1,7 @@
+env: test4
 spring:
-  application:
-    name: order
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    username: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
     password: 123456
     url: jdbc:mysql://192.168.1.5:3306/SpringCloud_Sell?characterEncoding=utf-8&useSSL=false
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
-env:
-  test
+    username: root
