--- a/order-test.yml
+++ b/order-test.yml
@@ -5,3 +5,8 @@ spring:
     password: 123456
     url: jdbc:mysql://192.168.1.5:3306/SpringCloud_Sell?characterEncoding=utf-8&useSSL=false
     username: root
+  rabbitmq:
+    host: 192.168.1.9
+    port: 5672
+    username: guest
+    password: guest
